--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
             </div>
           </nav>
             <!-- navbar -->
+                       <!-- banner -->
+                 <div class="mt-5">
+                    <img>
+                        <img src="images/banner.png" class="w-100" alt=""> </img>
+                        <div class="w-50  position-absolute top-50 start-50 translate-middle text-center ">
+                            <h1 class="display-1 text-white fw-semibold">We Provide Effective <br> Legal Solutions</h1>
+                            <p class=" text-secondary">There are many variations of passages of Lorem Ipsum available, but the majority 
+                             <br>   have suffered alteration in some form, by injected humour.</p>
+                             <form class="d-flex gap-3 justify-content-center " >
+                                <input class="p-2 border border-0 rounded bg-white text-secondary w-50" type="search" placeholder="search your service">
+                                <button class="btn btn-warning text-secondary"> search</button>
+                             </form>
+                        </div>
+                    </div>
+                 </div>
+
+                     <!-- banner -->
+
 
     </header>
                                  <!-- header part -->
