legal practice section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,88 @@
                                  <!-- header part -->
                                  <!-- main part -->
     <main>
+       <!-- legal practice area -->
+       <section class="mt-5">
+        <div class="text-center p-5">
+            <h1>The Legal Practice Area </h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority <br> have 
+                suffered alteration in some form, by injected humour</p>
+        </div>
+           <div class=" row ">
+            <div class=" col-sm-12 col-md-6 col-lg-4 text-center border-bottom p-5">
+                <img src="images/business.png" alt="">
+                <h2>Business Law
+                </h2>
+                <p>There are many variations of 
+                    passages of Lorem Ipsum 
+                    available, but the majority have 
+                    suffered alteration in some 
+                    form, by injected humour.</p>
+                    <a href="#"><img src="images/Frame.png" alt=""></a>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 text-center border  p-5">
+                <img src="images/criminal.png" alt="">
+                <h2>Criminal law
+                </h2>
+                <p>There are many variations of 
+                    passages of Lorem Ipsum 
+                    available, but the majority have 
+                    suffered alteration in some 
+                    form, by injected humour</p>
+                    <a href="#"><img src="images/Frame.png" alt=""></a>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 text-center border-bottom p-5">
+                <img src="images/child.png" alt="">
+                <h2>Child Support
+                </h2>
+                <p>There are many variations of 
+                    passages of Lorem Ipsum 
+                    available, but the majority have 
+                    suffered alteration in some 
+                    form, by injected humour</p>
+                    <a href="#"><img src="images/Frame.png" alt=""></a>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 text-center border-end p-5">
+                <img src="images/education.png" alt="">
+                <h2>Education Law </h2>
+                <p>There are many variations of 
+                    passages of Lorem Ipsum 
+                    available, but the majority have 
+                    suffered alteration in some 
+                    form, by injected humour</p>
+                    <a href="#"><img src="images/Frame.png" alt=""></a>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 text-center  p-5">
+                <img src="images/divorce.png" alt="">
+                <h2>Divorce Law
+
+                </h2>
+                <p>There are many variations of 
+                    passages of Lorem Ipsum 
+                    available, but the majority have 
+                    suffered alteration in some 
+                    form, by injected humour</p>
+                    <a href="#"><img src="images/Frame.png" alt=""></a>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 text-center border-start p-5">
+                <img src="images/tax.png" alt="">
+                <h2>Tax Law
+                </h2>
+                <p>There are many variations of 
+                    passages of Lorem Ipsum 
+                    available, but the majority have 
+                    suffered alteration in some 
+                    form, by injected humour</p>
+                    <a href="#"><img src="images/Frame.png" alt=""></a>
+            </div>
+           </div>
+       </section>
+
+              <!-- legal practice area -->
+
+
+
+
 
     </main>
                                 <!-- main part -->
