--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
        <section class="mt-5">
         <div class="text-center p-5">
             <h1>The Legal Practice Area </h1>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority <br> have 
+            <p class="text-secondary">There are many variations of passages of Lorem Ipsum available, but the majority <br> have 
                 suffered alteration in some form, by injected humour</p>
         </div>
            <div class=" row ">
@@ -152,6 +152,66 @@
        </section>
 
               <!-- legal practice area -->
+
+              <!-- claint say -->
+          <section class="mt-5">
+            <div class="text-center p-5">
+                <h1>What Our Client Say
+                </h1>
+                <p class="text-secondary">There are many variations of passages of Lorem Ipsum available, but the majority have 
+                   <br> suffered alteration in some form, by injected humour.</p>
+            </div>
+            <div>
+                <div id="carouselExampleCaptions" class="carousel slide w-75 mx-auto">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="images/slider-1.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block ">
+                            <img class="rounded-circle " src="images/person-3.png" alt="" style="width: 100px;" >
+                          <h5>Awlad Hossain</h5>
+                          <p>UI/UX Desginer</p>
+                          <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin 
+                            literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney 
+                            College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/slider-2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Second slide label</h5>
+                          <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/slider-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Third slide label</h5>
+                          <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+
+          </section>
+
+
+
+
+             <!-- claint say -->
 
 
 
