--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                     </div>
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
+                      <div class="carousel-item active ">
                         <img src="images/slider-1.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block ">
+                        <div class="carousel-caption d-none d-md-block">
                             <img class="rounded-circle " src="images/person-3.png" alt="" style="width: 100px;" >
                           <h5>Awlad Hossain</h5>
                           <p>UI/UX Desginer</p>
@@ -212,6 +212,82 @@
 
 
              <!-- claint say -->
+           <!-- Q/A section -->
+         <section class="mt-5">
+            <div class="text-center p-5">
+                <h1>Frequently Asked Any Questions </h1>
+                <p class="text-secondary">There are many variations of passages of Lorem Ipsum available, but the majority have 
+                  <br>  suffered alteration in some form, by injected humour.</p>
+            </div>
+            <div class="row items-center">
+                <div class=" col-sm-12 col-md-6 bg-secondary border rounded">
+                    <div class="accordion p-3  " id="accordionPanelsStayOpenExample">
+                        <div class="accordion-item  mb-4 border border-2 rounded p-3">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button fw-semibold" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                             What is the diffrence between flexbox and grid ?
+                            </button>
+                          </h2>
+                          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                            <div class="accordion-body">
+                                Grid and flexbox. The basic difference between CSS grid layout and CSS flexbox layout is that flexbox was designed for layout in one dimension - either a row or a column. Grid was designed for two-dimensional layout - rows, and columns at the same time.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item mb-4 border border-2 rounded p-3">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button collapsed fw-semibold " type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                              What is the purpose of media Querie?
+                            </button>
+                          </h2>
+                          <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+                            <div class="accordion-body">
+                                Media queries are a key part of responsive web design, as they allow you to create different layouts depending on the size of the viewport, but they can also be used to detect other things about the environment your site is running on, for example whether the user is using a touchscreen rather than a mouse.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item mb-4 border border-2 rounded p-3 ">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button collapsed fw-semibold " type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                              How does css box model work ?
+                            </button>
+                          </h2>
+                          <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                            <div class="accordion-body">
+                                The CSS Box Model is used to create a definition for the way the HTML elements are organized on the screen. This approach accounts for options such as margins, padding, borders, and all the properties that manipulate them. Each element can be thought of as having its own box.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item  border border-2 rounded p-3 ">
+                            <h2 class="accordion-header">
+                              <button class="accordion-button collapsed fw-semibold" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                                What is semantic tag ?
+                              </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
+                              <div class="accordion-body">
+                                Semantic HTML tags are tags that define the meaning of the content they contain. For example, tags like <header>, <article>, and <footer> are semantic HTML tags. They clearly indicate the role of the content they contain. On the other hand, tags like <div> and <span> are typical examples of non-semantic HTML elements.
+                              </div>
+                            </div>
+                          </div>
+                      </div>
+                </div>
+                
+            </div>
+            <div class="col-sm-12  col-md-6 ">
+                <img class="w-100" src="images/faq.png" alt="">
+
+            </div>
+
+
+
+
+         </section>
+
+
+
+
+             <!-- Q/A section -->
 
 
 
