--- a/index.html
+++ b/index.html
@@ -289,6 +289,69 @@
 
              <!-- Q/A section -->
 
+         <!-- Contact -->
+         <section class="mt-5">
+            <div class="text-center p-5">
+                <h1>Contact With Us</h1>
+                <p class="text-secondary">There are many variations of passages of Lorem Ipsum available, but the majority have 
+                  <br>  suffered alteration in some form, by injected humour.</p>
+            </div>
+            <div class="row text-center">
+                <div class="col-sm-12 col-md-6 mb-2 ">
+                    <div class="row   ">
+                        <div class=" col-sm-12 col-md-6 text-center border-end">
+                            <div class=" border-bottom  p-4">
+                                <img src="images/location.png" alt="">
+                                <h4>Location</h4>
+                                <p class="text-secondary">A108 Adam Street,<br> New York, NY 535022</p>
+                            </div>
+                            <div class=" p-4">
+                                <img src="images/email.png" alt="">
+                                <h4>Email Us</h4>
+                                <p class="text-secondary">info@gmail.com <br> info@gmail.com</p>
+                            </div>
+                        </div>
+                       
+                        <div class="col-sm-12 col-md-6 text-center   ">
+                            <div class=" border-bottom  p-4">
+                                <img src="images/call.png" alt="">
+                                <h4>Call Us</h4>
+                                <p class="text-secondary">+88 01750 00 00 00 <br> +88 01750 00 00 00</p>
+                            </div>
+                            <div class="  p-4">
+                                <img src="images/time.png" alt="">
+                                <h4>Working Hours</h4>
+                                <p class="text-secondary">Mon-Fri: 9AM to 5PM <br>
+
+                                    Sunday: 9AM to 1 PM</p>
+
+                            </div>
+                          
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sm-12 col-md-6">
+
+                    <form action="" class="w-100 mx-auto " >
+                        <label for="name"></label>
+                        <input class="w-75 p-2 mb-3 bg-white border border-1 rounded " type="text" id="name " name="name" placeholder="Your Name">
+                        <label for="Email"></label>
+                        <input class="w-75   p-2 mb-3 bg-white border border-1 rounded" type="email" id="Email" name="Email" placeholder="Your Email">
+                        <label for="subject"></label>
+                        <input class="w-75   p-2 mb-3 bg-white border border-1 rounded" type="text" id="subject" name="subject" placeholder="Subject">
+                        <label for="text"></label>
+                        <textarea class="w-75  p-2 bg-white border border-1 rounded" name="text " id="text" cols="10" rows="5" placeholder="Your messages"></textarea>
+                        <button class="btn btn-warning w-75"> send message</button>
+                    </form>
+
+                </div>
+            </div>
+
+         </section>
+
+            <!-- Contact -->
 
 
 
