--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!-- fontaswome link -->
 
 </head>
-<body class="w-75 mx-auto">
+<body>
                                  <!-- header part -->
-    <header>
+    <header  class="w-75 mx-auto">
            <!-- navbar -->
            <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -73,7 +73,7 @@
     </header>
                                  <!-- header part -->
                                  <!-- main part -->
-    <main>
+    <main class="w-75 mx-auto">
        <!-- legal practice area -->
        <section class="mt-5">
         <div class="text-center p-5">
@@ -353,13 +353,51 @@
 
             <!-- Contact -->
 
-
-
-
     </main>
                                 <!-- main part -->
                                 <!-- footer part -->
-    <footer>
+    <footer class="mt-5  text-secondary bg-black p-5">
+        <div class="row w-75 mx-auto">
+            <div class=" col-sm-12 col-md-3">
+                <div>
+                  <h4 class="mb-4"><img src="images/logo2.png" alt=""></h4> 
+                    <p>There are many variations of 
+                        passages of Lorem Ipsum 
+                        available, but the majority have 
+                        suffered alteration in some 
+                        form, by injected humour.</p>
+
+                </div>
+            </div>
+            <div class=" col-sm-12 col-md-3">
+                <h4  class="text-white mb-4">Usefull Link</h4>
+                <p>Home</p>
+                <p>About us</p>
+                <p>Case</p>
+                <p>Blog</p>
+                <p>Contact us</p>
+            </div>
+            <div class=" col-sm-12 col-md-3">
+                <h4 class="text-white mb-4">Contact Now
+                </h4>
+                <p>555 4th 5t NW, Washington <br>
+
+                    DC 20530, United States</p>
+                  <p> +88 01750 000 000 <br>
+                    
+                    +88 01750 000 000</p>  
+                 <p>   info@gmail.com <br>
+                    
+                    info@gmail.com</p>
+            </div>
+            <div class=" col-sm-12 col-md-3 ">
+                <h4 class="text-white mb-4">Subscribe</h4>
+                <p>Subscribe for our latest & 
+                    Articles. We Won t Give You 
+                    Spam Mail</p>
+                    <input class="p-2 border border-0 rounded" type="email" name="email" id="email" placeholder="Your email" > 
+            </div>
+        </div>
 
     </footer>
                                <!-- footer part -->
